--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^5.1.0"
+  },
+  "dependencies": {
+    "apollo-server-express": "^3.1.2",
+    "bcrypt": "^5.0.1",
+    "graphql": "^15.5.1"
   }
 }
