--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "googlebooks-app",
+  "name": "smart-recycle",
   "version": "1.0.0",
   "description": "",
   "main": "server/server.js",
@@ -7,6 +7,7 @@
     "start": "node server/server.js",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
+    "seed": "cd server && npm run seed",
     "build": "cd client && npm run build"
   },
   "keywords": [],
@@ -16,8 +17,9 @@
     "concurrently": "^5.1.0"
   },
   "dependencies": {
-    "apollo-server-express": "^3.1.2",
     "bcrypt": "^5.0.1",
-    "graphql": "^15.5.1"
+    "dotenv": "^10.0.0",
+    "graphql": "^15.5.1",
+    "jsonwebtoken": "^8.5.1"
   }
 }
